fix: My poor eyes need more contrast than that

--- a/www/style.css
+++ b/www/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: sans-serif;
 	padding: 2.5em;
-	background-color: #eeeeeeee;
+	background-color: #f6f6f6;
 }
 
 a {
